--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,8 @@
 .App {
     text-align: center;
     border: 2px solid #488645;
+    width: 500px;
+    margin: 20px auto;
 }
 
 .btn {
@@ -8,6 +10,5 @@
 }
 
 .header {
-    border: 2px solid #488645;
-}
 
+}
