--- a/src/App.css
+++ b/src/App.css
@@ -1,11 +1,10 @@
 .App {
     text-align: center;
-    border: 2px solid #FAEBD7;
+    border: 2px solid #000000;
     width: 500px;
     height: 500px;
     margin: 20px auto;
     border-radius: 7px;
-    filter: blur(3px);
     background-image: url("https://cms-assets.themuse.com/media/lead/_1200x630_crop_center-center_82_none/01212022-1047259374-coding-classes_scanrail.jpg?mtime=1642798879");
 }
 
@@ -46,6 +45,34 @@
 }
 
 .btn:active {
+    transform: scale(0.9);
+}
+
+.btn:disabled {
+    width: 150px;
+    position: relative;
+    display: inline-block;
+    margin: 15px;
+    padding: 15px 30px;
+    text-align: center;
+    font-size: 18px;
+    letter-spacing: 1px;
+    text-decoration: none;
+    color: #ff0000;
+    background: transparent;
+    cursor: pointer;
+    transition: ease-out 0.5s;
+    border: 2px solid #ff0000;
+    border-radius: 10px;
+    box-shadow: inset 0 0 0 0 #ff0000;
+}
+
+.btn:hover:disabled {
+    color: white;
+    box-shadow: inset 0 -100px 0 0 #ff0000;
+}
+
+.btn:active:disabled {
     transform: scale(0.9);
 }
 
