--- a/src/App.css
+++ b/src/App.css
@@ -62,4 +62,15 @@
     font-size: 70px;
     color: #7e9576;
 }
-
+.HeaderError{
+    border: 2px solid rgba(255, 0, 35, 0.98);
+    width: 400px;
+    height: 300px;
+    margin: 20px auto;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border-radius: 5px;
+    font-size: 70px;
+    color: rgba(255, 0, 35, 0.98);
+}
