--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,6 @@
 .App {
     text-align: center;
-    border: 2px solid #000000;
+    border: 2px solid #FAEBD7;
     width: 500px;
     height: 500px;
     margin: 20px auto;
