--- a/src/components/Buttons/Button.module.css
+++ b/src/components/Buttons/Button.module.css
@@ -30,7 +30,7 @@
 }
 
 .btn:hover {
-    color: white;
+    color: #000000;
     box-shadow: inset 0 -100px 0 0 #FAEBD7;
 }
 
@@ -58,7 +58,7 @@
 }
 
 .btn:hover:disabled {
-    color: white;
+    color: #000000;
     box-shadow: inset 0 -100px 0 0 #ff0000;
 }
 
