--- a/src/App.css
+++ b/src/App.css
@@ -2,10 +2,10 @@
     text-align: center;
     border: 2px solid #FAEBD7;
     width: 500px;
-    height: 500px;
+    height: 620px;
     margin: 20px auto;
     border-radius: 7px;
-    background-image: url("img/bg.jpg");
+    background-image: url("img/background2.jpg");
 }
 
 
