--- a/src/components/Counter/Button/Button.module.css
+++ b/src/components/Counter/Button/Button.module.css
@@ -65,3 +65,65 @@
 .btn:active:disabled {
     transform: scale(0.9);
 }
+
+/*buttonSet --------------------------------------------*/
+
+.set {
+    width: 100px;
+    height: 30px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin: 15px;
+    padding: 15px 30px;
+    text-align: center;
+    font-size: 15px;
+    letter-spacing: 1px;
+    text-decoration: none;
+    color: #FAEBD7;
+    background: transparent;
+    cursor: pointer;
+    transition: ease-out 0.5s;
+    border: 2px solid #FAEBD7;
+    border-radius: 10px;
+    box-shadow: inset 0 0 0 0 #FAEBD7;
+}
+
+.set:hover {
+    color: #000000;
+    box-shadow: inset 0 -100px 0 0 #FAEBD7;
+}
+
+.set:active {
+    transform: scale(0.9);
+}
+
+.set:disabled {
+    width: 100px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin: 15px;
+    padding: 15px 30px;
+    text-align: center;
+    font-size: 18px;
+    letter-spacing: 1px;
+    text-decoration: none;
+    color: #ff0000;
+    background: transparent;
+    cursor: pointer;
+    transition: ease-out 0.5s;
+    border: 2px solid #ff0000;
+    border-radius: 10px;
+    box-shadow: inset 0 0 0 0 #ff0000;
+}
+
+.set:hover:disabled {
+    color: #000000;
+    box-shadow: inset 0 -100px 0 0 #ff0000;
+}
+
+.set:active:disabled {
+    transform: scale(0.9);
+}
+
