--- a/src/components/Counter/SettingsCounter/Values/MaxValue/MaxValue.module.css
+++ b/src/components/Counter/SettingsCounter/Values/MaxValue/MaxValue.module.css
@@ -1,8 +1,26 @@
-.error{
+.error {
     border-color: red;
     outline: none;
     color: red;
 }
-.truth:focus{
+
+.truth:focus {
     outline: none;
 }
+
+.maxValue {
+    display: flex;
+    width: 150px;
+    flex-direction: column;
+    align-items: center;
+    color: #FAEBD7;
+}
+
+.maxValue input {
+    width: 80%;
+    background: transparent;
+    border-radius: 4px;
+    color: #FAEBD7;
+}
+
+
