--- a/src/components/Counter/SettingsCounter/Values/StartValue/StartValue.module.css
+++ b/src/components/Counter/SettingsCounter/Values/StartValue/StartValue.module.css
@@ -19,7 +19,8 @@
 
 .startValue input {
     width: 80%;
-    background: transparent;
+    background: #FAEBD7;
     border-radius: 4px;
-    color: #FAEBD7;
+    color: black;
+    border: 2px solid #FAEBD7
 }
