--- a/src/components/Counter/NumberDisplay/NumberDisplay.module.css
+++ b/src/components/Counter/NumberDisplay/NumberDisplay.module.css
@@ -1,30 +1,42 @@
-.error{
-  color: red;
+.error {
+    color: red;
 }
 
 .HeaderError {
-  border: 2px solid rgba(255, 0, 35, 0.98);
-  width: 400px;
-  height: 300px;
-  margin: 20px auto;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  border-radius: 5px;
-  font-size: 70px;
-  color: rgba(255, 0, 35, 0.98);
+    border: 2px solid rgba(255, 0, 35, 0.98);
+    width: 400px;
+    height: 300px;
+    margin: 20px auto;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border-radius: 5px;
+    font-size: 70px;
+    color: rgba(255, 0, 35, 0.98);
 }
 
 .Header {
-  border: 2px solid #FAEBD7;
-  width: 400px;
-  height: 300px;
+    border: 2px solid #FAEBD7;
+    width: 400px;
+    height: 300px;
+    margin: 20px auto;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border-radius: 5px;
+    font-size: 70px;
+    color: #FAEBD7;
+}
 
-  margin: 20px auto;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  border-radius: 5px;
-  font-size: 70px;
-  color: #FAEBD7;
+.errorMessage {
+    border: 2px solid rgba(255, 0, 35, 0.98);
+    width: 400px;
+    height: 300px;
+    margin: 20px auto;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border-radius: 5px;
+    color: rgba(255, 0, 35, 0.98);
+    font-size: 20px;
 }
